mejoras de header y footer

--- a/desarrollo-web/index.html
+++ b/desarrollo-web/index.html
@@ -9,9 +9,8 @@
   </head>
   <body>
     <header class="header">
-      <div>
         <figure class="logo">
-          <img src="images/logo.png" alt="Logo de http://leonidasesteban.com"> 
+          <img src="images/logo.png" height="50" alt="Logo de http://leonidasesteban.com"> 
         </figure>
         <nav class="menu">
           <ol>
@@ -26,7 +25,6 @@
             </li>
           </ol>
         </nav>
-      </div>
     </header>
     <section class="hero">
       <h1>
@@ -72,6 +70,15 @@
         <button>Enviar</button>
       </form>
     </section>
-    <footer class="footer">footer</footer>
+    <footer class="footer">
+      <div>
+        <p>Curso de Desarrollo web online 2019 <img src="images/platzi.png" alt="platzi" width="80"></p>
+      </div>
+      <div>
+        <p>
+          Designed wuth <\3 by <a href= "http://twitter.com/thespianartist">@thespianartist</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
